syntax = "proto3";

package user;

option go_package = "proto/user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message GetUserRequest {
    uint32 id = 1;
}

message UpdateUserRequest {
    uint32 id = 1;
    optional string name = 2;
    optional string email = 3;
    optional bool is_active = 4;
}

message DeleteUserRequest {
    uint32 id = 1;
}

message DeleteUserResponse {
    string message = 1;
}

message ListUsersRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message UserResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
    bool is_active = 4;
    string created_at = 5;
    string updated_at = 6;
}

message ListUsersResponse {
    repeated UserResponse users = 1;
    int32 total = 2;
}